--- a/src/main/resources/templates/detail-sale.html
+++ b/src/main/resources/templates/detail-sale.html
@@ -14,7 +14,7 @@
 			<nav>
 				<span>
 					<a href="/">
-						<img src="/images/LogoEnchere.png" alt="Logo">
+						<img src="/images/LogoEnchere2.png" alt="Logo">
 					</a>
 				</span>
 				<div>
