--- a/src/main/resources/templates/fragments/fragment-entete.html
+++ b/src/main/resources/templates/fragments/fragment-entete.html
@@ -1,13 +1,14 @@
-<header xmlns:th="http://www.thymeleaf.org"	data-th-fragment="frag-entete">
-	<nav>
-		<span>
-            <a href="/">
-                <img src="/images/LogoEnchere.png" alt="Logo">
-            </a>
-        </span>
-		<div>
-			<a href="/">ENI Enchères</a>
-		</div>
+<header xmlns:th="http://www.thymeleaf.org" data-th-fragment="frag-entete">
+	<div class="banner-background">
+		<nav>
+            <span>
+                <a href="/">
+                    <img src="/images/LogoEnchere2.png" alt="Logo">
+                </a>
+            </span>
+			<div>
+				<a href="/">ENI Enchères</a>
+			</div>
 			<div id="navbarTogglerDemo02">
 				<ul>
 					<li><a aria-current="page" data-th-href="@{/}">Accueil</a></li>
@@ -18,6 +19,22 @@
 					<li th:if="${#authorization.expression('isAuthenticated()')}"><a data-th-href="@{/logout}">Déconnexion</a></li>
 				</ul>
 			</div>
-		</div>
-	</nav>
+
+			<div class="auction-search">
+				<h3>Liste des Enchères</h3>
+				<div class="search-container">
+					<form action="/search" method="get" class="search-form">
+						<div class="search-wrapper">
+							<input type="text" name="searchArticleName" class="form-control search-input" placeholder="Saisir votre recherche...">
+							<button class="btn btn-primary search-button btn-nav">Recherche</button>
+						</div>
+					</form>
+				</div>
+				<select id="listeCat" class="select-nav">
+					<option class="option-nav" value="0">Catégorie : </option>
+					<option class="option-nav" data-th-each="category : ${listCategory}" th:value="${category.idCategory}" th:text="${category.categoryName}"></option>
+				</select>
+			</div>
+		</nav>
+	</div>
 </header>
