--- a/src/main/resources/templates/updateArticle.html
+++ b/src/main/resources/templates/updateArticle.html
@@ -13,7 +13,7 @@
   <nav>
         <span>
             <a href="/">
-                <img src="/images/LogoEnchere.png" alt="Logo">
+                <img src="/images/LogoEnchere2.png" alt="Logo">
             </a>
         </span>
     <div>
